--- a/noresm_aerocom_converter/data/conversions.yaml
+++ b/noresm_aerocom_converter/data/conversions.yaml
@@ -468,60 +468,60 @@ rsutcscaDSTA3:
   formula: x.FSNT_DSTA3-x.FSNTCDRF_DSTA3
   new_name: rsutcscaDSTA3
   units: W m-2
-sconcbc:
+concbc:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*(x.BC_A[:,{LL},:,:]+x.BC_AC[:,{LL},:,:]+x.BC_AX[:,{LL},:,:]+x.BC_N[:,{LL},:,:]+x.BC_NI[:,{LL},:,:]+x.BC_AI[:,{LL},:,:]+x.BC_A_OCW[:,{LL},:,:]+x.BC_AC_OCW[:,{LL},:,:]+x.BC_N_OCW[:,{LL},:,:]+x.BC_NI_OCW[:,{LL},:,:]+x.BC_AI_OCW[:,{LL},:,:])*1e9
-  new_name: sconcbc
+  new_name: concbc
   units: ug m-3
-sconcdms:
+concdms:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*x.DMS[:,{LL},:,:]*1e9*62.13/28.97
-  new_name: sconcdms
+  new_name: concdms
   units: ug m-3
-sconcdust:
+concdust:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*(x.DST_A2[:,{LL},:,:]+x.DST_A3[:,{LL},:,:]+x.DST_A2_OCW[:,{LL},:,:]+x.DST_A3_OCW[:,{LL},:,:])*1e9
-  new_name: sconcdust
+  new_name: concdust
   units: ug m-3
-sconcdustpm25:
+concdustpm25:
   coordinates: Surface
   formula: x.C_MIPM25
-  new_name: sconcdustpm25
+  new_name: concdustpm25
   units: ug m-3
-sconcoa:
+concoa:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*(x.OM_AC[:,{LL},:,:]+x.OM_AI[:,{LL},:,:] +x.OM_NI[:,{LL},:,:]+x.SOA_NA[:,{LL},:,:]+x.SOA_A1[:,{LL},:,:]+x.OM_AC_OCW[:,{LL},:,:]+x.OM_AI_OCW[:,{LL},:,:]+x.OM_NI_OCW[:,{LL},:,:]+x.SOA_NA_OCW[:,{LL},:,:]+x.SOA_A1_OCW[:,{LL},:,:])*1e9
-  new_name: sconcoa
+  new_name: concoa
   units: ug m-3
-sconcpm10:
+concpm10:
   coordinates: Surface
   formula: x.PMTOT-x.PS/287.0/x.TS*1e9*({F10DSTA3}*x.DST_A3[:,{LL},:,:]+{F10SSA3}*x.SS_A3[:,{LL},:,:])
-  new_name: sconcpm10
+  new_name: concpm10
   units: ug m-3
-sconcpm10by20:
+concpm10by20:
   coordinates: Surface
   formula: (x.PMTOT-x.PS/287.0/x.TS*1e9*({F10DSTA3}*x.DST_A3[:,{LL},:,:]+{F10SSA3}*x.SS_A3[:,{LL},:,:]))/(x.PMTOT)
-  new_name: sconcpm10by20
+  new_name: concpm10by20
   units: '1'
-sconcpm25:
+concpm25:
   coordinates: Surface
   formula: x.PM25
-  new_name: sconcpm25
+  new_name: concpm25
   units: ug m-3
-sconcso2:
+concso2:
   coordinates: Surface
   formula: (x.PS/287.0/TS)*x.SO2[:,{LL},:,:]*1e9*64.066/28.97
-  new_name: sconcso2
+  new_name: concso2
   units: ug m-3
-sconcso4:
+concso4:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*{SF1}*(x.SO4_A1[:,{LL},:,:]+{SF2}/{SF1}*x.SO4_A2[:,{LL},:,:]+x.SO4_PR[:,{LL},:,:]+x.SO4_NA[:,{LL},:,:]+x.SO4_A1_OCW[:,{LL},:,:]+{SF2}/{SF1}*x.SO4_A2_OCW[:,{LL},:,:]+x.SO4_PR_OCW[:,{LL},:,:]+x.SO4_NA_OCW[:,{LL},:,:])*1e9
-  new_name: sconcso4
+  new_name: concso4
   units: ug m-3
-sconcss:
+concss:
   coordinates: Surface
   formula: (x.PS/287.0/x.TS)*(x.SS_A1[:,{LL},:,:]+x.SS_A2[:,{LL},:,:]+x.SS_A3[:,{LL},:,:]+x.SS_A1_OCW[:,{LL},:,:]+x.SS_A2_OCW[:,{LL},:,:]+x.SS_A3_OCW[:,{LL},:,:])*1e9
-  new_name: sconcss
+  new_name: concss
   units: ug m-3
 tas:
   coordinates: Surface
