--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.11"
 typer = "^0.9.0"
 rich = "^13.7.1"
 pathlib = "^1.0.1"
-xarray = "^2024.2.0"
+xarray = "<=2022.10.0"
 netcdf4 = "^1.6.5"
 dask = "^2024.2.1"
 pyyaml = "^6.0.1"
