--- a/noresm_aerocom_converter/data/conversions_raw.yaml
+++ b/noresm_aerocom_converter/data/conversions_raw.yaml
@@ -1,4 +1,4 @@
-sbs550aer:
+abs550aer:
   coordinates: Column
   formula: x.ABS550AL
   new_name: abs550aer
@@ -200,7 +200,7 @@ landf:
   units: '1'
 loadbc:
   coordinates: Column
-  formula: (x.cb_BC)*1e6
+  formula: (x.cb_BC+x.cb_BC_NI_OCW+x.cb_BC_N_OCW+x.cb_BC_A_OCW+x.cb_BC_AI_OCW+x.cb_BC_AC_OCW)*1e6
   new_name: loadbc
   units: mg m-2
 loaddms:
@@ -210,7 +210,7 @@ loaddms:
   units: mg m-2
 loaddust:
   coordinates: Column
-  formula: (x.cb_DUST)*1e6
+  formula: (x.cb_DUST+x.cb_DST_A2_OCW+x.cb_DST_A3_OCW)*1e6
   new_name: loaddust
   units: mg m-2
 loaddu:
@@ -230,7 +230,7 @@ loadduDSTA3:
   units: kg m-2
 loadoa:
   coordinates: Column
-  formula: (x.cb_OM)*1e6
+  formula: (x.cb_OM+x.cb_OM_NI_OCW+x.cb_OM_AI_OCW+x.cb_OM_AC_OCW+x.cb_SOA_NA_OCW+x.cb_SOA_A1_OCW)*1e6
   new_name: loadoa
   units: mg m-2
 loadso2:
@@ -240,12 +240,12 @@ loadso2:
   units: mg m-2
 loadso4:
   coordinates: Column
-  formula: (x.cb_SULFATE)*1e6
+  formula: (0.9796*(x.cb_SO4_A1+0.7424458962841975*x.cb_SO4_A2+x.cb_SO4_NA+x.cb_SO4_PR+x.cb_SO4_AC+x.cb_SO4_A1_OCW+0.7424458962841975*x.cb_SO4_A2_OCW+x.cb_SO4_AC_OCW+x.cb_SO4_NA_OCW+x.cb_SO4_PR_OCW))*1e6
   new_name: loadso4
   units: mg m-2
 loadss:
   coordinates: Column
-  formula: (x.cb_SALT)*1e6
+  formula: (x.cb_SALT+x.cb_SS_A1_OCW+x.cb_SS_A2_OCW+x.cb_SS_A3_OCW)*1e6
   new_name: loadss
   units: mg m-2
 lwp:
@@ -560,7 +560,7 @@ rsutcscaDSTA3:
   units: W m-2
 concbc:
   coordinates: Surface
-  formula: (x.PS/287.0/x.TS)*(x.BC_A[:,{LL},:,:]+x.BC_AC[:,{LL},:,:]+x.BC_AX[:,{LL},:,:]+x.BC_N[:,{LL},:,:]+x.BC_NI[:,{LL},:,:]+x.BC_AI[:,{LL},:,:]+x.BC_A_OCW[:,{LL},:,:]+x.BC_AC_OCW[:,{LL},:,:]+x.BC_N_OCW[:,{LL},:,:]+x.BC_NI_OCW[:,{LL},:,:]+x.BC_AI_OCW[:,{LL},:,:])*1e9
+  formula: (x.PS/287.0/x.TS)*(x.BC_A[:,{LL},:,:]+x.BC_AC[:,{LL},:,:]+x.BC_AX[:,{LL},:,:]+x.BC_N[:,{LL},:,:]+x.BC_NI[:,{LL},:,:]+x.BC_AI[:,{LL},:,:])*1e9
   new_name: concbc
   units: ug m-3
 concdms:
@@ -570,7 +570,7 @@ concdms:
   units: ug m-3
 concdust:
   coordinates: Surface
-  formula: (x.PS/287.0/x.TS)*(x.DST_A2[:,{LL},:,:]+x.DST_A3[:,{LL},:,:]+x.DST_A2_OCW[:,{LL},:,:]+x.DST_A3_OCW[:,{LL},:,:])*1e9
+  formula: (x.PS/287.0/x.TS)*(x.DST_A2[:,{LL},:,:]+x.DST_A3[:,{LL},:,:])*1e9
   new_name: concdust
   units: ug m-3
 concdustpm25:
@@ -580,7 +580,7 @@ concdustpm25:
   units: ug m-3
 concoa:
   coordinates: Surface
-  formula: (x.PS/287.0/x.TS)*(x.OM_AC[:,{LL},:,:]+x.OM_AI[:,{LL},:,:] +x.OM_NI[:,{LL},:,:]+x.SOA_NA[:,{LL},:,:]+x.SOA_A1[:,{LL},:,:]+x.OM_AC_OCW[:,{LL},:,:]+x.OM_AI_OCW[:,{LL},:,:]+x.OM_NI_OCW[:,{LL},:,:]+x.SOA_NA_OCW[:,{LL},:,:]+x.SOA_A1_OCW[:,{LL},:,:])*1e9
+  formula: (x.PS/287.0/x.TS)*(x.OM_AC[:,{LL},:,:]+x.OM_AI[:,{LL},:,:] +x.OM_NI[:,{LL},:,:]+x.SOA_NA[:,{LL},:,:]+x.SOA_A1[:,{LL},:,:])*1e9
   new_name: concoa
   units: ug m-3
 concpm10:
@@ -605,12 +605,12 @@ concso2:
   units: ug m-3
 concso4:
   coordinates: Surface
-  formula: (x.PS/287.0/x.TS)*{SF1}*(x.SO4_A1[:,{LL},:,:]+{SF2}/{SF1}*x.SO4_A2[:,{LL},:,:]+x.SO4_PR[:,{LL},:,:]+x.SO4_NA[:,{LL},:,:]+x.SO4_A1_OCW[:,{LL},:,:]+{SF2}/{SF1}*x.SO4_A2_OCW[:,{LL},:,:]+x.SO4_PR_OCW[:,{LL},:,:]+x.SO4_NA_OCW[:,{LL},:,:]+x.SO4_AC[:,{LL},:,:]+x.SO4_AC_OCW[:,{LL},:,:])*1e9
+  formula: (x.PS/287.0/x.TS)*{SF1}*(x.SO4_A1[:,{LL},:,:]+{SF2}/{SF1}*x.SO4_A2[:,{LL},:,:]+x.SO4_PR[:,{LL},:,:]+x.SO4_NA[:,{LL},:,:]+x.SO4_AC[:,{LL},:,:])*1e9
   new_name: concso4
   units: ug m-3
 concss:
   coordinates: Surface
-  formula: (x.PS/287.0/x.TS)*(x.SS_A1[:,{LL},:,:]+x.SS_A2[:,{LL},:,:]+x.SS_A3[:,{LL},:,:]+x.SS_A1_OCW[:,{LL},:,:]+x.SS_A2_OCW[:,{LL},:,:]+x.SS_A3_OCW[:,{LL},:,:])*1e9
+  formula: (x.PS/287.0/x.TS)*(x.SS_A1[:,{LL},:,:]+x.SS_A2[:,{LL},:,:]+x.SS_A3[:,{LL},:,:])*1e9
   new_name: concss
   units: ug m-3
 sst:
