--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ packages = [{ include = "noresm_aerocom_converter" }]
 [tool.poetry.dependencies]
 numpy = ">=1.24.4, <2.0.0"
 python = "^3.10"
-typer = "^0.9.0"
+typer = ">=0.19.2"
 rich = "^13.7.1"
 pathlib = "^1.0.1"
 xarray = ">=2022.12.0"
 netcdf4 = "^1.6.5"
-dask = "^2024.2.1"
+dask = ">=2024.2.1"
 pyyaml = "^6.0.1"
 cftime = "^1.6.3"
 
